--- a/apps/jupyter/jupyter-web-app/upstream/base/deployment.yaml
+++ b/apps/jupyter/jupyter-web-app/upstream/base/deployment.yaml
@@ -28,6 +28,8 @@ spec:
           value: $(JWA_USERID_HEADER)
         - name: USERID_PREFIX
           value: $(JWA_USERID_PREFIX)
+        - name:  APP_SECURE_COOKIES
+          value: "false"
       serviceAccountName: service-account
       volumes:
       - configMap:
