--- a/apps/centraldashboard/upstream/base/configmap.yaml
+++ b/apps/centraldashboard/upstream/base/configmap.yaml
@@ -10,67 +10,49 @@ data:
         {
           "type": "item",
           "link": "/jupyter/",
-          "text": "Notebooks",
+          "text": "开发环境",
           "icon": "book"
         },
         {
           "type": "item",
-          "link": "/tensorboards/",
-          "text": "Tensorboards",
-          "icon": "assessment"
-        },
-        {
-          "type": "item",
           "link": "/volumes/",
-          "text": "Volumes",
+          "text": "存储",
           "icon": "device:storage"
         },
         {
           "type": "item",
           "link": "/models/",
-          "text": "Models",
+          "text": "模型",
           "icon": "kubeflow:models"
         },
         {
           "type": "item",
-          "link": "/katib/",
-          "text": "Experiments (AutoML)",
-          "icon": "kubeflow:katib"
-        },
-        {
-          "type": "item",
-          "text": "Experiments (KFP)",
-          "link": "/pipeline/#/experiments",
-          "icon": "done-all"
-        },
-        {
-          "type": "item",
           "link": "/pipeline/#/pipelines",
-          "text": "Pipelines",
+          "text": "工作流",
           "icon": "kubeflow:pipeline-centered"
         },
         {
           "type": "item",
           "link": "/pipeline/#/runs",
-          "text": "Runs",
+          "text": "运行中工作流",
           "icon": "maps:directions-run"
         },
         {
           "type": "item",
           "link": "/pipeline/#/recurringruns",
-          "text": "Recurring Runs",
+          "text": "定时工作流",
           "icon": "device:access-alarm"
         },
         {
           "type": "item",
           "link": "/pipeline/#/artifacts",
-          "text": "Artifacts",
+          "text": "制品仓库",
           "icon": "editor:bubble-chart"
         },
         {
           "type": "item",
           "link": "/pipeline/#/executions",
-          "text": "Executions",
+          "text": "工作流历史",
           "icon": "av:play-arrow"
         }
       ],
@@ -99,39 +81,9 @@ data:
         ],
         "documentationItems": [
           {
-            "text": "Getting Started with Kubeflow",
-            "desc": "Get your machine-learning workflow up and running on Kubeflow",
-            "link": "https://www.kubeflow.org/docs/started/getting-started/"
-          },
-          {
-            "text": "MiniKF",
-            "desc": "A fast and easy way to deploy Kubeflow locally",
-            "link": "https://www.kubeflow.org/docs/started/getting-started-minikf/"
-          },
-          {
-            "text": "Microk8s for Kubeflow",
-            "desc": "Quickly get Kubeflow running locally on native hypervisors",
-            "link": "https://www.kubeflow.org/docs/started/getting-started-multipass/"
-          },
-          {
-            "text": "Minikube for Kubeflow",
-            "desc": "Quickly get Kubeflow running locally",
-            "link": "https://www.kubeflow.org/docs/started/getting-started-minikube/"
-          },
-          {
-            "text": "Kubeflow on GCP",
-            "desc": "Running Kubeflow on Kubernetes Engine and Google Cloud Platform",
-            "link": "https://www.kubeflow.org/docs/gke/"
-          },
-          {
-            "text": "Kubeflow on AWS",
-            "desc": "Running Kubeflow on Elastic Container Service and Amazon Web Services",
-            "link": "https://www.kubeflow.org/docs/aws/"
-          },
-          {
-            "text": "Requirements for Kubeflow",
-            "desc": "Get more detailed information about using Kubeflow and its components",
-            "link": "https://www.kubeflow.org/docs/started/requirements/"
+            "text": "HMB入门",
+            "desc": "使用HMB进行多方数据分析和人工智能协作，保护你的数据安全隐私",
+            "link": "https://www.yuque.com/hmb-docs/uuto8e"
           }
         ]
     }
