--- a/apps/centraldashboard/upstream/base/deployment.yaml
+++ b/apps/centraldashboard/upstream/base/deployment.yaml
@@ -18,7 +18,7 @@ spec:
     spec:
       containers:
       - name: centraldashboard
-        image: public.ecr.aws/j1r0q0g6/notebooks/central-dashboard
+        image: registry.cn-shenzhen.aliyuncs.com/taibiaoguo-pub/centraldashboard
         imagePullPolicy: IfNotPresent
         livenessProbe:
           httpGet:
