[fix]pipelines 添加 CRFS相关环境变量

--- a/apps/kfp-tekton/upstream/base/installs/multi-user/pipelines-ui/deployment-patch.yaml
+++ b/apps/kfp-tekton/upstream/base/installs/multi-user/pipelines-ui/deployment-patch.yaml
@@ -28,6 +28,8 @@ spec:
           value: kubeflow-userid
         - name: KUBEFLOW_USERID_PREFIX
           value: ""
+        - name: APP_SECURE_COOKIES
+          value: "false"
         volumeMounts:
         - name: config-volume
           mountPath: /etc/config
