--- a/apps/pipeline/upstream/base/pipeline/ml-pipeline-ui-deployment.yaml
+++ b/apps/pipeline/upstream/base/pipeline/ml-pipeline-ui-deployment.yaml
@@ -20,7 +20,7 @@ spec:
         configMap:
           name: ml-pipeline-ui-configmap
       containers:
-      - image: gcr.io/ml-pipeline/frontend:dummy
+      - image: registry.cn-shenzhen.aliyuncs.com/h0p1/pipelines:v1.6.0
         imagePullPolicy: IfNotPresent
         name: ml-pipeline-ui
         ports:
