--- a/common/knative/knative-eventing/base/kustomization.yaml
+++ b/common/knative/knative-eventing/base/kustomization.yaml
@@ -11,3 +11,32 @@ commonLabels:
   kustomize.component: knative
   app.kubernetes.io/component: knative-eventing
   app.kubernetes.io/name: knative-eventing
+
+images:
+- name: gcr.io/knative-releases/knative.dev/eventing/cmd/controller@sha256:6ddffbc286a84048cfd090193d00b4ecda25a3a7bf2de1a8e873f8b3755cc913
+  newName: registry.cn-shenzhen.aliyuncs.com/h0p1/knative-dev-eventing-cmd-controller
+  newTag: v1.6.0
+- name: gcr.io/knative-releases/knative.dev/eventing/cmd/apiserver_receive_adapter@sha256:a05b1db9acdfe901417307ddf403ec3702f219e5aeb25d692bc9542fc6421330
+  newName: registry.cn-shenzhen.aliyuncs.com/h0p1/knative-dev-eventing-cmd-apiserver-receive-adapter
+  newTag: v1.6.0
+- name: gcr.io/knative-releases/knative.dev/eventing/cmd/mtping@sha256:edf462d03591e53e536640591a53538e6bea837fea15ed081eccfb42bc35a5c0
+  newName: registry.cn-shenzhen.aliyuncs.com/h0p1/knative-dev-eventing-cmd-mtping
+  newTag: v1.6.0
+- name: gcr.io/knative-releases/knative.dev/eventing/cmd/webhook@sha256:9f70a2a8bb78781472fba0327c5d6ff91f13a29736d4502bf8ad3d60d3f16ccd
+  newName: registry.cn-shenzhen.aliyuncs.com/h0p1/knative-eventing-webhook
+  newTag: v1.6.0
+- name: gcr.io/knative-releases/knative.dev/eventing/cmd/in_memory/channel_controller@sha256:904f42a768a9bc64999e7302d2bc7c1c48a08e74a82355cf57be513e6a124b82
+  newName: registry.cn-shenzhen.aliyuncs.com/h0p1/knative-eventing-channel-controller
+  newTag: v1.6.0
+- name: gcr.io/knative-releases/knative.dev/eventing/cmd/in_memory/channel_dispatcher@sha256:a6983f71c04619928199cc21e07ee6f1e1c87586621bc03b10c9ba1abd92bfa8
+  newName: registry.cn-shenzhen.aliyuncs.com/h0p1/knative-eventing-channel_dispatcher
+  newTag: v1.6.0
+- name: gcr.io/knative-releases/knative.dev/eventing/cmd/mtchannel_broker@sha256:a2678934d280ea19b0804cc7757d559a0312e2acea221b17a99bd830cd9eeaac
+  newName: registry.cn-shenzhen.aliyuncs.com/h0p1/knative-eventing-mtchannel-broker
+  newTag: v1.6.0
+- name: gcr.io/knative-releases/knative.dev/eventing/cmd/broker/filter@sha256:0e25aa1613a3a1779b3f7b7f863e651e5f37520a7f6808ccad2164cc2b6a9b12
+  newName: registry.cn-shenzhen.aliyuncs.com/h0p1/knative-eventing-broker-filter
+  newTag: v1.6.0
+- name: gcr.io/knative-releases/knative.dev/eventing/cmd/broker/ingress@sha256:cf579f88aa2a37c240e25bb886c1ef5404e326e12c7caf571e49308612243eee
+  newName: registry.cn-shenzhen.aliyuncs.com/h0p1/knative-eventing-broker-ingress
+  newTag: v1.6.0
